--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
 
     <dimen name="padding_standard">2dp</dimen>
 
+    <dimen name="tile_width">44dp</dimen>
+    <dimen name="tile_margin">1dp</dimen>
+
 </resources>
