--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="padding_standard">2dp</dimen>
+    <dimen name="padding_standard">4dp</dimen>
+
+    <dimen name="tile_width">44dp</dimen>
+    <dimen name="tile_margin">1dp</dimen>
 
 </resources>
