--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="padding_standard">4dp</dimen>
+    <dimen name="padding_tile_set">10dp</dimen>
 
     <dimen name="tile_width">44dp</dimen>
     <dimen name="tile_margin">1dp</dimen>
