--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/ll_playground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/test_background"
                 android:orientation="vertical">
 
 
@@ -61,5 +62,13 @@
 
     </HorizontalScrollView>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:onClick="onClick"
+        app:layout_constraintBottom_toTopOf="@+id/sv_tile_set"
+        app:layout_constraintEnd_toEndOf="@+id/sv_vertical"
+        app:layout_constraintStart_toStartOf="@+id/sv_vertical" />
 </android.support.constraint.ConstraintLayout>
