--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,71 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/green_felt"
-    android:padding="8dp"
+    android:background="@color/main_background_transparent"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:id="@+id/sv_vertical"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@+id/sv_tile_set"
+
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="373dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <HorizontalScrollView
-            android:id="@+id/sv_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:fillViewport="true"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="16dp">
-
-            <LinearLayout
-                android:id="@+id/ll_playground"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/test_background"
-                android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rummikub_tr" />
 
 
-            </LinearLayout>
-        </HorizontalScrollView>
-
-    </ScrollView>
-
-    <HorizontalScrollView
-        android:id="@+id/sv_tile_set"
+    <Button
+        android:id="@+id/btn_start_game"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="0dp"
+
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:fillViewport="true"
+        android:elevation="24dp"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:onClick="onButtonClick"
+        android:shadowColor="@color/colorPrimaryDark"
+        android:text="@string/start_game"
+        android:textAppearance="@style/MyMenuTextAppearance"
 
-        <LinearLayout
-            android:id="@+id/ll_tile_set"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"></LinearLayout>
+        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
+        app:layout_constraintStart_toStartOf="@+id/iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
-    </HorizontalScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_test"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btn_configure_players"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="0dp"
+
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:onClick="onClick"
-        app:layout_constraintBottom_toTopOf="@+id/sv_tile_set"
-        app:layout_constraintEnd_toEndOf="@+id/sv_vertical"
-        app:layout_constraintStart_toStartOf="@+id/sv_vertical" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="24dp"
+        android:onClick="onButtonClick"
+
+        android:shadowColor="@color/colorPrimaryDark"
+        android:text="@string/player"
+        android:textAppearance="@style/MyMenuTextAppearance"
+
+        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
+
+        app:layout_constraintStart_toStartOf="@+id/iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_game" />
+
+
+    <Button
+        android:id="@+id/btn_config"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="0dp"
+
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="24dp"
+        android:onClick="onButtonClick"
+
+        android:shadowColor="@color/colorPrimaryDark"
+        android:text="@string/settings"
+        android:textAppearance="@style/MyMenuTextAppearance"
+
+        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
+
+        app:layout_constraintStart_toStartOf="@+id/iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/btn_configure_players" />
+
+
 </android.support.constraint.ConstraintLayout>
