--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,13 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="colorMainText">#CE3A36</color>
+
+    <color name="main_background">#88FFCA</color>
+    <color name="main_background_transparent">#6CFFD8AB</color>
+
+
+
 
     <!-- test-colors -->
     <color name="test_background">#88FF0000</color>
