--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -16,13 +16,14 @@
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:onClick="onButtonClick"
         app:backgroundTint="@color/colorMainText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lv_players"
+        app:layout_constraintStart_toStartOf="@+id/lv_players"
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <include
