--- a/app/src/main/res/layout/dialog_add_game.xml
+++ b/app/src/main/res/layout/dialog_add_game.xml
@@ -6,21 +6,20 @@
     android:layout_height="wrap_content">
 
     <TextView
-
-        android:id="@+id/tv_player_name"
+        android:id="@+id/tv_game_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/player_name"
+        android:text="@string/game_name"
         android:textAppearance="@style/MyMenuTextAppearance"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/dlg_add_name"
+        app:layout_constraintBottom_toBottomOf="@+id/dlg_games_add_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/dlg_add_name"
+        android:id="@+id/dlg_games_add_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,7 +30,7 @@
         android:textAppearance="@style/MyMenuTextAppearance"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_player_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_game_name"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Name" />
 </android.support.constraint.ConstraintLayout>
