--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:onClick="onButtonClick"
 
         android:shadowColor="@color/colorPrimaryDark"
-        android:text="@string/player"
+        android:text="@string/players"
         android:textAppearance="@style/MyMenuTextAppearance"
 
         app:layout_constraintEnd_toEndOf="@+id/iv_logo"
@@ -64,6 +64,26 @@
         app:layout_constraintStart_toStartOf="@+id/iv_logo"
         app:layout_constraintTop_toBottomOf="@+id/btn_start_game" />
 
+    <Button
+        android:id="@+id/btn_configure_games"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="0dp"
+
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="24dp"
+        android:onClick="onButtonClick"
+
+        android:shadowColor="@color/colorPrimaryDark"
+        android:text="@string/games"
+        android:textAppearance="@style/MyMenuTextAppearance"
+
+        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
+
+        app:layout_constraintStart_toStartOf="@+id/iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/btn_configure_players" />
 
     <Button
         android:id="@+id/btn_config"
@@ -84,7 +104,7 @@
         app:layout_constraintEnd_toEndOf="@+id/iv_logo"
 
         app:layout_constraintStart_toStartOf="@+id/iv_logo"
-        app:layout_constraintTop_toBottomOf="@+id/btn_configure_players" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_configure_games" />
 
 
 </android.support.constraint.ConstraintLayout>
