--- a/app/src/main/res/layout/listview_games_listitem.xml
+++ b/app/src/main/res/layout/listview_games_listitem.xml
@@ -2,36 +2,42 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/li_cl_ground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
-
-        android:id="@+id/tv_player_name"
+        android:id="@+id/li_games_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/player_name"
         android:textAppearance="@style/MyMenuTextAppearance"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/dlg_add_name"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Spiel 1" />
 
-    <EditText
-        android:id="@+id/dlg_add_name"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/li_games_tv_id"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/li_games_tv_title"
+        tools:text="ID" />
+
+    <TextView
+        android:id="@+id/li_games_tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textAppearance="@style/MyMenuTextAppearance"
-        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_player_name"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Name" />
+        tools:text="das Spiel läuft..." />
+
 </android.support.constraint.ConstraintLayout>
