--- a/app/src/main/res/menu/menu_games_contextual_action_bar.xml
+++ b/app/src/main/res/menu/menu_games_contextual_action_bar.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/cab_players_change"
+    <item android:id="@+id/cab_games_change"
         android:title="@string/cab_change"
         android:icon="@android:drawable/ic_menu_edit"/>
 
-    <item android:id="@+id/cab_players_delete"
+    <item android:id="@+id/cab_games_delete"
         android:title="@string/cab_delete"
         android:icon="@android:drawable/ic_menu_delete"/>
 
