vor änderung an playersAvtivity (spieler zum spielen auswählen)

--- a/app/src/main/res/layout/activity_games.xml
+++ b/app/src/main/res/layout/activity_games.xml
@@ -12,19 +12,6 @@
 
     tools:context=".GamesActivity">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_games_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:onClick="onButtonClick"
-        app:backgroundTint="@color/colorMainText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/lv_players"
-        app:layout_constraintStart_toStartOf="@+id/lv_players"
-        app:srcCompat="@android:drawable/ic_input_add" />
 
     <include
         android:id="@+id/toolbar"
@@ -46,5 +33,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_games_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:onClick="onButtonClick"
+        app:backgroundTint="@color/colorMainText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.constraint.ConstraintLayout>
