--- a/app/src/main/res/layout/listview_players_listitem.xml
+++ b/app/src/main/res/layout/listview_players_listitem.xml
@@ -42,4 +42,16 @@
         app:layout_constraintTop_toBottomOf="@+id/li_players_tv_name"
         tools:text="ID" />
 
+    <ImageView
+        android:id="@+id/li_players_iv_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/checkbox_off_background" />
+
 </android.support.constraint.ConstraintLayout>
