--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:textSize">32sp</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/colorMainText</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
 </resources>
