--- a/app/src/main/res/layout/activity_playground.xml
+++ b/app/src/main/res/layout/activity_playground.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@+id/fab_playground_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tv_playground_player">
 
         <HorizontalScrollView
             android:id="@+id/sv_horizontal"
@@ -93,4 +93,17 @@
         android:text="GameData"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fab_playground_button" />
+
+    <TextView
+        android:id="@+id/tv_playground_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textAppearance="@style/MyMenuTextAppearance"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Spieler" />
 </android.support.constraint.ConstraintLayout>
